Integrate the pagination,filtering and sorting in banner and classifier and refactor the delete method code of services and controller, put customer into the user