@@ -1,6 +1,5 @@
 package com.bedatasolutions.leaseDrop.dao;
 
-
 import com.bedatasolutions.leaseDrop.constants.db.FieldType;
 import com.bedatasolutions.leaseDrop.dao.abstracts.AuditableEntity;
 import jakarta.persistence.*;
@@ -9,12 +8,15 @@ import lombok.Setter;
 import org.hibernate.annotations.ColumnDefault;
 
 import java.util.List;
+import java.util.Arrays;
+import java.util.stream.Collectors;
 
 @Entity
 @Table(name = "T_CLASSIFIER")
 @Getter
 @Setter
 public class ClassifierDao extends AuditableEntity {
+
     @Id
     @GeneratedValue(strategy = GenerationType.AUTO)
     @Column(name = "id_classifier_key")
@@ -32,29 +34,33 @@ public class ClassifierDao extends AuditableEntity {
     @Column(name = "tx_description", length = 500)
     private String description;
 
-
-    @Column(name = "tx_type")
     @Enumerated(EnumType.STRING)
-    FieldType type;
+    @Column(name = "tx_type")
+    private FieldType type;
 
     @Column(name = "is_active", nullable = false)
     @ColumnDefault("false")
     private boolean isActive;
 
-
-    // Storing the list as a CSV string in the database
+    // Store relation as a serialized List<String> (CSV or JSON format)
     @Column(name = "tx_relation", columnDefinition = "TEXT")
-    private String relation;  // This is the CSV string
+    private String relation;  // This holds the serialized List<String> as a CSV string
 
-    // Convert the List<String> to a comma-separated string
-    public void setRelationList(List<String> relationList) {
-        this.relation = String.join(",", relationList);  // Convert List to CSV
+    // Serialize the List<String> into a CSV string before saving
+    @PrePersist
+    public void prePersist() {
+        if (relation != null && !relation.isEmpty()) {
+            // Serialize List<String> to CSV string
+            this.relation = String.join(",", relation);  // Convert List<String> to CSV
+        }
     }
 
-    // Convert the CSV string back to List<String>
+    // Convert CSV string to List<String> after retrieval
     public List<String> getRelationList() {
-        return List.of(this.relation.split(","));  // Convert CSV back to List
+        if (relation == null || relation.isEmpty()) {
+            return List.of();  // Return an empty list if relation is null or empty
+        }
+        return Arrays.asList(relation.split(","));  // Convert CSV string back to List<String>
     }
-
 
 }
